Long urls in list are now truncated to prevent page overflow

--- a/brit/static/css/brit.css
+++ b/brit/static/css/brit.css
@@ -12,3 +12,20 @@
     text-decoration: none !important;
     color: inherit !important;
 }
+
+.table .url-cell {
+    position: relative;
+}
+
+.table .url-cell span {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    position: absolute;
+    width: 95%;
+}
+
+.url-cell:before {
+  content: '';
+  display: inline-block;
+}
